# Mining-Challenge-MSR-2026

./: .gitignore  README.md  complete_execution.sh  pyproject.toml
artifacts/: agent_clones_change_patterns.csv  agent_clones_evolution_patterns.csv  change_patterns_summary.csv  correlation_summary.txt  evolution_patterns_summary.csv  human_clones_change_patterns.csv  human_clones_evolution_patterns.csv  projects_survival_overview.csv  statistical_test_output.txt  statistical_test_results.csv
italo-base/: nicad_operations.py
src/: 0_get_aidev.py  0_get_aidev_csv.py  10_statistical_test.py  1_get_all_projects.py  1_prepare_agents_prs.py  2_get_all_merged_commits.py  2_get_last_merged_commit_per_project.py  2_get_merged_commits.py  2_prepare_human_prs.py  3_compute_clone_density.py  3_get_balanced_repositories.py  3_get_genealogy.py  4_compute_genealogy.py  4_get_commits.py  4_get_genealogy.py  5_compute_genealogy.py  5_get_genealogy.py  5_statistical_test.py  6_projects_overview.py  6_projects_survival_overview.py  6_survive.py  7_genealogy_patterns_analysis.py  7_k-volatile.py  8_deep_genealogy_patterns_analysis.py  9_k-volatile.py  filter_balanced_repos.py  get_commits.py
src/clone_genealogy/: CloneVersion.py  clean_cs_code.py  clean_py_code.py  clean_rb_code.py  clone_density.py  core.py  git_operations.py
src/omniccg/: CloneVersion.py  clean_cs_code.py  core.py
src/utils/: boxplot.py  compute_time.py  folders_paths.py  github_operations.py  nicad_operations.py
